Revert "Removed the grid from the background of all pages (it's commented out only)"
This reverts commit 70e091eba0855bee03ad0887c6af33e707d06ee2.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -151,10 +151,10 @@
     }
     
     /* Enhance background grid visibility on mobile */
-    /*.bg-lines {
+    .bg-lines {
         opacity: 0.3; /* Slightly higher opacity for better visibility */
         z-index: 0; /* Ensure it's above other elements */
-    }/*
+    }
     
 /* Maintain horizontal layout for mobile but with improved sizing and interaction */
 .work-grid {
